[package]
name = "minigrep_eduruizzo_test"
license = "MIT"
version = "0.1.0"
edition = "2018"
description = "simple grep version following rust book to learn the language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
